--- a/TestPuppeteerSharp/TestPuppeteerSharp.csproj
+++ b/TestPuppeteerSharp/TestPuppeteerSharp.csproj
@@ -6,12 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="LaunchOptionsArgs.cs~RF90cb13.TMP" />
-    <None Remove="LaunchOptionsArgs.cs~RF928110.TMP" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="PuppeteerSharp" Version="6.0.0" />
+    <PackageReference Include="RestSharp" Version="106.13.0" />
     <PackageReference Include="Spectre.Console" Version="0.42.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
