--- a/Ouchn/Ouchn.csproj
+++ b/Ouchn/Ouchn.csproj
@@ -16,6 +16,9 @@
     <PackageReference Include="PuppeteerExtraSharp" Version="1.3.1" />
     <PackageReference Include="PuppeteerSharp" Version="6.0.0" />
     <PackageReference Include="RestSharp" Version="106.15.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.43.0" />
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
   </ItemGroup>
